--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,7 @@ body {
 .btn-download {
   text-align: center;
   margin-top: 20px;
+  background-color: rgb(92, 82, 136);
 }
 
 button {
@@ -51,7 +52,5 @@ input {
   max-width: 300px;
   padding: 10px;
   margin: 4px;
+  pointer-events:visible;
 }
-
-
-
